@@ -71,7 +71,7 @@ class KeyMacro: noncopyable
 public:
 	KeyMacro();
 
-	static bool AddMacro(const GUID& PluginId,const MacroAddMacro* Data);
+	static bool AddMacro(const GUID& PluginId,const MacroAddMacroV1* Data);
 	static bool DelMacro(const GUID& PluginId,void* Id);
 	static bool ExecuteString(MacroExecuteString *Data);
 	static bool GetMacroKeyInfo(const string& strArea,int Pos,string &strKeyName,string &strDescription);
