@@ -1,4 +1,8 @@
-﻿shmuel 30.09.2017 14:46:04 +0200 - build 620
+﻿zg 08.10.2017 14:46:34 +0300 - build 621
+
+1. 0003514: Возможность задать приоритет макросов, определяемым через MCTL_ADDMACRO.
+
+shmuel 30.09.2017 14:46:04 +0200 - build 620
 
 1. Откат 619, т.к. не учитывается возможность вызова диалога из независимых от плагина lua_State.
 
