@@ -1,3 +1,7 @@
+zg 08.10.2017 14:45:39 +0300 - build 5063
+
+1. 0003514: Возможность задать приоритет макросов, определяемым через MCTL_ADDMACRO.
+
 drkns 06.10.2017 18:12:24 +0100 - build 5062
 
 1. И ещё.
